DPC-17: Added initial Macaroons support
Created dpc-macaroons module to add some helper methods around the core jamcaroons library.

We can now create, serialize and deserialize Macaroons without having to directly call the macaroons library. So that's kind of nice.

We only support first-party caveats at this point, and no root key rotation.

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>dpc-attribution</module>
         <module>dpc-common</module>
         <module>dpc-bluebutton</module>
+        <module>dpc-macaroons</module>
     </modules>
 
     <groupId>gov.cms.dpc</groupId>
