DPC-17: Organization Tokens are verifying correctly
Cleaned up the actual injection into the Attribution Service.

Modified the MacaroonCaveat parser to support any characters after the operator.

--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -6,4 +6,6 @@ dpc.attribution {
   sundial {
     annotated-jobs-package-name = gov.cms.dpc.attribution.jobs
   }
+
+  publicServerURL = "https://dpc.cms.gov"
 }
