--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -7,5 +7,11 @@ dpc.attribution {
     annotated-jobs-package-name = gov.cms.dpc.attribution.jobs
   }
 
+  logging {
+    loggers {
+      "org.hibernate.SQL" = TRACE
+    }
+  }
+
   publicServerURL = "https://dpc.cms.gov"
 }
