DPC-17: We can now generate tokens with specific versions and expiration times
Added default suppliers/verifiers for generating and verifying specific token properties.

--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -12,6 +12,17 @@ dpc.attribution {
       "org.hibernate.SQL" = TRACE
     }
   }
-
   publicServerURL = "https://dpc.cms.gov"
+
+  tokens {
+    versionPolicy {
+      minimumVersion = 1
+      currentVersion = 1
+    }
+
+    expirationPolicy {
+      expirationOffset = 1
+      expirationUnit = "YEARS"
+    }
+  }
 }
