parallelRequests instead of parallelFetches
- Some comments
- Adjust JobModel number

--- a/dpc-aggregation/src/main/resources/application.conf
+++ b/dpc-aggregation/src/main/resources/application.conf
@@ -21,4 +21,5 @@ dpc.aggregation {
   retryCount = 3 // Number of times to retry reach BB request
   resourcesPerFile = 1000 // Max number of resources that a export file will have before creating a new file
   exportPath = "/tmp"
+  parallelRequests = false
 }
