--- a/dpc-web/Gemfile
+++ b/dpc-web/Gemfile
@@ -12,6 +12,7 @@ gem 'coffee-rails', '~> 4.2'
 gem 'turbolinks', '~> 5'
 gem 'jbuilder', '~> 2.5'
 gem 'bootsnap', '>= 1.1.0', require: false
+gem 'rouge-rails'
 
 gem 'jquery-rails'
 gem 'bootstrap'
