DPC-289: Shade plugin now generates version-less JARs
When building the Uber jars, we no longer include the project version.
This makes the name easier to remember as well as makes it less likely that we'll forget to update something in the future.

The versions are still there for the individual source and documentation JARs.

--- a/dpc-aggregation/pom.xml
+++ b/dpc-aggregation/pom.xml
@@ -144,6 +144,8 @@
                             </excludes>
                         </filter>
                     </filters>
+                    <shadedArtifactAttached>true</shadedArtifactAttached>
+                    <finalName>${project.artifactId}</finalName>
                 </configuration>
                 <executions>
                     <execution>
