--- a/dpc-api/pom.xml
+++ b/dpc-api/pom.xml
@@ -129,6 +129,8 @@
                             </excludes>
                         </filter>
                     </filters>
+                    <shadedArtifactAttached>true</shadedArtifactAttached>
+                    <finalName>${project.artifactId}</finalName>
                 </configuration>
                 <executions>
                     <execution>
