Clean up AggregationEngine constructor
Moved much of the Config stuff into a OperationsConfig structure. Pulled the encryption stuff out of configuration. It's not something that changes.

--- a/dpc-aggregation/src/main/resources/application.conf
+++ b/dpc-aggregation/src/main/resources/application.conf
@@ -19,7 +19,8 @@ dpc.aggregation {
     count = 100 // Max number of resource that a request to BB will return before using another request
   }
   retryCount = 3 // Number of times to retry reach BB request
-  resourcesPerFile = 1000 // Max number of resources that a export file will have before creating a new file
+  resourcesPerFile = 5000 // Max number of resources that a export file will have before creating a new file
   exportPath = "/tmp"
-  parallelRequests = false
+  parallelRequestsEnabled = false
+  encryptionEnabled = false
 }
