--- a/dpc-web/package.json
+++ b/dpc-web/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "dependencies": {
     "@cmsgov/design-system-core": "^2.0.1",
-    "@cmsgov/design-system-layout": "^2.0.1",
-    "normalize.css": "^8.0.1"
+    "@cmsgov/design-system-layout": "^2.0.1"
   }
 }
