DPC-294: Basic practitioner functionality
Added simple support for persisting and querying Practitioner entities.

--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -84,6 +84,11 @@
             <artifactId>dropwizard-client</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>${hapi.fhir.groupID}</groupId>
+            <artifactId>hapi-fhir-client</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
