DPC-294: Limit DB connection poll to avoid test failures
Slim down the number of connection we open by default.
This should help avoid CI test failures.

--- a/src/main/resources/server.conf
+++ b/src/main/resources/server.conf
@@ -5,6 +5,7 @@ database {
   url = "jdbc:postgresql://localhost:5432/dpc_attribution"
   user = postgres
   password = dpc-safe
+  maxSize = 10
 }
 
 server {
