DPC-17: Create API token for organizations (#65)
* DPC-13: Added command for registering organizations

Added simple command to input an organization resource and send it to the Attribution Service.

The corresponding API endpoint does not exist, but the integration and parsing works.

* DPC-13: Initial commit of Organization endpoint for registration

Added OrganizationEntity for storing FHIR resource in database.

Created a new FHIRConvertable interface for adding to/from FHIR methods to a given resource.

* DPC-13:  Entity serialization is working correctly.

We can now create an OrganizationEntity from the underlying FHIR resource.

The extractors are pretty clunky, but the basic logic is working.

* DPC-13: Organization registration command is working

A couple of small tweaks to get organization registration working.

* DPC-13: Expanded org resource test

Added a negative test to the organization resource endpoint.

Modified travis file to clean install as the first step, to avoid any caching issues.

Registration Command now outputs to the stderr when there's a problem.

* DPC-13: Normalized Organization FHIR resource

Organization resource is now persisted across a number of tables, still a bunch of empty values, but we're getting closer.

Added a simple converter system for translating between FHIR and Hibernate entity types.

* DPC-13: Entity references are working

Yup, it works now.

* DPC-13: Organization Registration is now working

We can register an organization, with its contacts and endpoints in a single call.

This should only be available when connected to CMSNet, as we don't publicly map the ports for the attribution service. Still, in the future, we might consider moving this to the admin layer.

* DPC-13: Fix failing compilation and integration tests

Cleaned up some of the attribution tests and addressed some ErrorProne warnings.

* DPC-13: More error prone fixes

Cleaned up a couple of Erro

--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -6,4 +6,23 @@ dpc.attribution {
   sundial {
     annotated-jobs-package-name = gov.cms.dpc.attribution.jobs
   }
+
+  logging {
+    loggers {
+      "org.hibernate.SQL" = TRACE
+    }
+  }
+  publicServerURL = "https://dpc.cms.gov"
+
+  tokens {
+    versionPolicy {
+      minimumVersion = 1
+      currentVersion = 1
+    }
+
+    expirationPolicy {
+      expirationOffset = 1
+      expirationUnit = "YEARS"
+    }
+  }
 }
