--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
   - mvn jacoco:report
   - mkdir reports
   - |
-    for module in dpc-aggregation dpc-api dpc-attribution dpc-queue
+    for module in dpc-aggregation dpc-api dpc-attribution dpc-queue dpc-macaroons
     do
       JACOCO_SOURCE_PATH=./$module/src/main/java ./cc-test-reporter format-coverage ./$module/target/site/jacoco/jacoco.xml --input-type jacoco -o reports/codeclimate.unit.$module.json
     done
