--- a/src/main/resources/server.conf
+++ b/src/main/resources/server.conf
@@ -25,3 +25,11 @@ logging {
     logFormat = "%-5p [%d{ISO8601,UTC} - %t] %c: %m%n%rEx"
   }]
 }
+
+metrics {
+  frequency = 1 minute
+  reporters = [{
+    type = log
+    logger = metrics
+  }]
+}
