--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -85,6 +85,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>${hapi.fhir.groupID}</groupId>
+            <artifactId>hapi-fhir-client</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>gov.cms.dpc</groupId>
             <artifactId>dpc-macaroons</artifactId>
             <version>0.3.0-SNAPSHOT</version>
