--- a/dpc-web/Gemfile
+++ b/dpc-web/Gemfile
@@ -12,7 +12,7 @@ gem 'coffee-rails', '~> 4.2'
 gem 'jbuilder', '~> 2.5'
 gem 'bootsnap', '>= 1.1.0', require: false
 gem 'rouge-rails'
-gem 'redcarpet'
+gem 'kramdown', '~> 2.1'
 
 gem 'jquery-rails'
 gem 'bootstrap'
