--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -3,6 +3,7 @@ dpc.attribution {
   include "server.conf"
 
   expirationThreshold = 90 // In days
+  migrationEnabled = true
   sundial {
     annotated-jobs-package-name = gov.cms.dpc.attribution.jobs
   }
