DPC-139: Initial testing support for validators.
We can now use the built-in Hibernate validators in order to ensure that our FHIR resources are correct, which is neat.

Also added a custom error handler for dealing with validation errors, since the default handler doesn't seem to be working.

--- a/dpc-common/pom.xml
+++ b/dpc-common/pom.xml
@@ -66,8 +66,8 @@
             <groupId>${hapi.fhir.groupID}</groupId>
             <artifactId>hapi-fhir-validation</artifactId>
             <version>${hapi.fhir.version}</version>
-            <scope>test</scope>
         </dependency>
+        <!--        Validations use the R4 validator, even for STU3 resources-->
         <dependency>
             <groupId>${hapi.fhir.groupID}</groupId>
             <artifactId>hapi-fhir-structures-r4</artifactId>
