--- a/dpc-bluebutton/pom.xml
+++ b/dpc-bluebutton/pom.xml
@@ -59,6 +59,12 @@
             <artifactId>mockserver-client-java</artifactId>
             <version>${mockserverVersion}</version>
         </dependency>
+       <dependency>
+          <groupId>gov.cms.dpc</groupId>
+          <artifactId>dpc-common</artifactId>
+          <version>0.3.0-SNAPSHOT</version>
+          <scope>compile</scope>
+       </dependency>
     </dependencies>
 
     <build>
