--- a/pom.xml
+++ b/pom.xml
@@ -389,6 +389,8 @@
                         <exclude>gov/cms/dpc/attribution/dao/**/*</exclude>
                         <!-- Exclude the cli commands, which we don't have tests for-->
                         <exclude>gov/cms/dpc/**/cli/**/*</exclude>
+                        <!-- Exclude HL7 parsers, because they're too big-->
+                        <exclude>org/hl7/fhir/r4/formats/*</exclude>
                     </excludes>
                 </configuration>
                 <executions>
