--- a/dpc-common/pom.xml
+++ b/dpc-common/pom.xml
@@ -71,11 +71,12 @@
         <dependency>
             <groupId>${hapi.fhir.groupID}</groupId>
             <artifactId>hapi-fhir-structures-r4</artifactId>
-            <version>${hapi.fhir.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>${hapi.fhir.groupID}</groupId>
             <artifactId>hapi-fhir-validation-resources-dstu3</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
