--- a/dpc-api/src/main/resources/application.conf
+++ b/dpc-api/src/main/resources/application.conf
@@ -9,4 +9,12 @@ dpc.api {
     timeout: 5s
     connectionRequestTimeout: 5s
   }
+
+  fhir {
+    validation {
+      enabled = true
+      schemaValidation = true
+      schematronValidation = true
+    }
+  }
 }
