--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -25,4 +25,7 @@ dpc.attribution {
       expirationUnit = "YEARS"
     }
   }
+
+  // Disable FHIR validation
+  fhir.validation.enabled = false
 }
