--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,11 @@
                 <artifactId>hapi-fhir-structures-dstu3</artifactId>
                 <version>${hapi.fhir.version}</version>
             </dependency>
+            <dependency>
+                <groupId>${hapi.fhir.groupID}</groupId>
+                <artifactId>hapi-fhir-structures-r4</artifactId>
+                <version>${hapi.fhir.version}</version>
+            </dependency>
             <!--Test dependencies-->
             <dependency>
                 <groupId>org.slf4j</groupId>
