--- a/dpc-api/pom.xml
+++ b/dpc-api/pom.xml
@@ -63,6 +63,10 @@
             <version>0.3.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>${hapi.fhir.groupID}</groupId>
+            <artifactId>hapi-fhir-client</artifactId>
+        </dependency>
         <!--        Validations use the R4 validator, even for STU3 resources-->
         <dependency>
             <groupId>${hapi.fhir.groupID}</groupId>
@@ -72,25 +76,16 @@
             <groupId>${hapi.fhir.groupID}</groupId>
             <artifactId>hapi-fhir-validation-resources-dstu3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.helger</groupId>
+            <artifactId>ph-schematron</artifactId>
+            <scope>compile</scope>
+        </dependency>
         <!--Test resources-->
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-testing</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>${hapi.fhir.groupID}</groupId>
-            <artifactId>hapi-fhir-validation-resources-dstu3</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.helger</groupId>
-            <artifactId>ph-schematron</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${hapi.fhir.groupID}</groupId>
-            <artifactId>hapi-fhir-client</artifactId>
-            <!--This will need to get flipped back to test, once we fully decouple the aggregtion engine-->
-            <!--<scope>test</scope>-->
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
