DPC-139: Implement FHIR validation support (#87)
* DPC-139: Simple test showing validations do work, sort of.

We need to directly include the profile to validate against.

* DPC-139: Name validations are working as well.

Turns out, order matters, so keep that in mind when we're writing validations in the future.

* DPC-139: Refactored Validations loading

We can now parse StructureDefinitions from the JAR and load them.

We're also more careful about what resources we return and when.

* DPC-258: Initial pass for patient validation rules

Added a couple of validators for patient rules, nothing that actually works yet.

* DPC-258: Telecom validation is working.

We can now verify that a Patient has an sms-capable phone.

* DPC-258: Complexier queries are working.

We're using FHIRPath to do some clever things with verifying that explicit birthOrder is given.

All the constraints need to be placed on the root resource node, but that's ok.

* DPC-258: We can slice for MBIs, but the profile fails validation

Not sure why there's an issue with unique ID names for the elements, but everything else is passing.

* DPC-258: Address validation is working.

It would probably be better to use a slice, but I'm not sure how to make those work yet.

* DPC-139: Rename and inject validation module

We can now inject the validator as a singleton and do cool things with it.

* DPC-139: Initial testing support for validators.

We can now use the built-in Hibernate validators in order to ensure that our FHIR resources are correct, which is neat.

Also added a custom error handler for dealing with validation errors, since the default handler doesn't seem to be working.

* DPC-139: Validations are now injectable, within a test context.

The nastiest integration ever, but it seems to be working.

We had to really override the default Validation provider, because it doesn't support injection.

* DPC-258: Patient validation is passing con

--- a/dpc-api/pom.xml
+++ b/dpc-api/pom.xml
@@ -67,11 +67,14 @@
             <version>0.3.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
-        <!--Test resources-->
         <dependency>
-            <groupId>io.dropwizard</groupId>
-            <artifactId>dropwizard-testing</artifactId>
-            <scope>test</scope>
+            <groupId>${hapi.fhir.groupID}</groupId>
+            <artifactId>hapi-fhir-client</artifactId>
+        </dependency>
+        <!--        Validations use the R4 validator, even for STU3 resources-->
+        <dependency>
+            <groupId>${hapi.fhir.groupID}</groupId>
+            <artifactId>hapi-fhir-structures-r4</artifactId>
         </dependency>
         <dependency>
             <groupId>${hapi.fhir.groupID}</groupId>
@@ -80,12 +83,13 @@
         <dependency>
             <groupId>com.helger</groupId>
             <artifactId>ph-schematron</artifactId>
+            <scope>compile</scope>
         </dependency>
+        <!--Test resources-->
         <dependency>
-            <groupId>${hapi.fhir.groupID}</groupId>
-            <artifactId>hapi-fhir-client</artifactId>
-            <!--This will need to get flipped back to test, once we fully decouple the aggregtion engine-->
-            <!--<scope>test</scope>-->
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-testing</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
