--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -26,4 +26,7 @@ dpc.attribution {
       expirationUnit = "YEARS"
     }
   }
+
+  // Disable FHIR validation
+  fhir.validation.enabled = false
 }
