DPC-328: Dockerfile to build dpc-web

--- a/dpc-web/config/database.yml
+++ b/dpc-web/config/database.yml
@@ -29,15 +29,12 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: dpc-website
+  username: postgres
 
   # The password associated with the postgres role (username).
-  password: <%= Rails.application.credentials.db[:development][:password] %>
+  password: dpc-safe
 
-  # Connect on a TCP socket. Omitted by default since the client uses a
-  # domain socket that doesn't need configuration. Windows does not have
-  # domain sockets, so uncomment these lines.
-  #host: localhost
+  host: db
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
@@ -82,4 +79,4 @@ production:
   <<: *default
   database: dpc-website_production
   username: dpc-website
-  password: <%= Rails.application.credentials.db[:production][:password] %>
+  password:
