--- a/src/main/resources/server.conf
+++ b/src/main/resources/server.conf
@@ -5,6 +5,9 @@ database {
   url = "jdbc:postgresql://localhost:5432/dpc_attribution"
   user = postgres
   password = dpc-safe
+  initialSize = 5
+  minSize = 5
+  maxSize = 10
 }
 
 server {
