DPC-331: More resources and added license link

--- a/dpc-api/src/main/resources/application.conf
+++ b/dpc-api/src/main/resources/application.conf
@@ -20,5 +20,7 @@ dpc.api {
 
   swagger {
     resourcePackage = gov.cms.dpc.api.resources
+    license = "license"
+    licenseUrl = "https://github.com/CMSgov/dpc-app/blob/master/LICENSE.md"
   }
 }
