--- a/dpc-attribution/src/main/resources/application.conf
+++ b/dpc-attribution/src/main/resources/application.conf
@@ -29,4 +29,11 @@ dpc.attribution {
 
   // Disable FHIR validation
   fhir.validation.enabled = false
+
+  swagger {
+    title = "DPC Attribution Service"
+    description = """This service handles the majority of the application business logic, including authentication and attribution.
+    <p>It performs no validation of input data, which is the domain of the API service or any internal services that might call it."""
+    resourcePackage = gov.cms.dpc.attribution.resources
+  }
 }
