--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@ bbcerts/*
 !bbcerts/README.md
 !bbcerts/bb.keystore.enc
 .java-version
+
+# Ignore the IG outputs
+ig/output
+ig/generated_output
+
+*.code-workspace
+.factorypath
