DPC-374: Initial commit of FHIR IG (#98)
* DPC-374: Initial commit of FHIR IG

* DPC-374: Create ig publisher command

Added a Makefile with the necessary commands for downloading and running the IG publisher.

* DPC-374: Exclude IG files from CodeClimate

* DPC-374: Re-add default ignore paths

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,11 @@ bbcerts/*
 !bbcerts/README.md
 !bbcerts/bb.keystore.enc
 .java-version
+
+# Ignore the IG outputs
+ig/output
+ig/generated_output
+.bin/
+
+*.code-workspace
+.factorypath
