--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
             <email>anne.e.sullivan@omb.eop.gov</email>
             <organization>United States Digital Service</organization>
         </developer>
+        <developer>
+            <id>ronak</id>
+            <name>Ronak Shah</name>
+            <email>ronak.shah@hhs.gov</email>
+            <organization>US Department of Health and Human Services</organization>
+        </developer>
     </developers>
 
     <dependencyManagement>
