First attempt to integrate postman/newman with travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ before_install:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 
+install:
+  - npm install newman
+
 script:
   - mvn clean install -DskipTests=true -Dmaven.javadoc.skip=true -Perror-prone -B -V
   - mvn test -B -V
@@ -36,6 +39,10 @@ script:
   - sleep 30
   # Run the integration-test profile, which only runs a subset of the tests
   - mvn test -Pintegration-tests -pl dpc-api
+  - docker-compose down
+  - docker-compose up
+  - sleep 30
+  - node_modules/.bin/newman run src/test/EndToEndRequestTest.postman_collection.json
   - mvn jacoco:report
   - |
     for module in dpc-api
