--- a/.travis.yml
+++ b/.travis.yml
@@ -22,30 +22,30 @@ before_install:
   - ./cc-test-reporter before-build
 
 script:
-#  - mvn clean install -DskipTests=true -Dmaven.javadoc.skip=true -Perror-prone -B -V
-#  - mvn test -B -V
-#  # Format the test results and copy to a new directory
-#  - mvn jacoco:report
-#  - mkdir reports
-#  - |
-#    for module in dpc-aggregation dpc-api dpc-attribution dpc-queue dpc-macaroons
-#    do
-#      JACOCO_SOURCE_PATH=./$module/src/main/java ./cc-test-reporter format-coverage ./$module/target/site/jacoco/jacoco.xml --input-type jacoco -o reports/codeclimate.unit.$module.json
-#    done
-#  - ls reports
-#  - docker-compose down
-#  - docker-compose up -d --scale api=0
-#  - sleep 30
-#  # Run the integration-test profile, which only runs a subset of the tests
-#  - mvn test -Pintegration-tests -pl dpc-api
-#  - mvn jacoco:report
-#  - |
-#    for module in dpc-api
-#    do
-#      JACOCO_SOURCE_PATH=./$module/src/main/java ./cc-test-reporter format-coverage ./$module/target/site/jacoco/jacoco.xml --input-type jacoco -o reports/codeclimate.integration.$module.json
-#    done
-#  - ./cc-test-reporter sum-coverage reports/codeclimate.* -o coverage/codeclimate.json
-#  - ./cc-test-reporter upload-coverage
+  - mvn clean install -DskipTests=true -Dmaven.javadoc.skip=true -Perror-prone -B -V
+  - mvn test -B -V
+  # Format the test results and copy to a new directory
+  - mvn jacoco:report
+  - mkdir reports
+  - |
+    for module in dpc-aggregation dpc-api dpc-attribution dpc-queue dpc-macaroons
+    do
+      JACOCO_SOURCE_PATH=./$module/src/main/java ./cc-test-reporter format-coverage ./$module/target/site/jacoco/jacoco.xml --input-type jacoco -o reports/codeclimate.unit.$module.json
+    done
+  - ls reports
+  - docker-compose down
+  - docker-compose up -d --scale api=0
+  - sleep 30
+  # Run the integration-test profile, which only runs a subset of the tests
+  - mvn test -Pintegration-tests -pl dpc-api
+  - mvn jacoco:report
+  - |
+    for module in dpc-api
+    do
+      JACOCO_SOURCE_PATH=./$module/src/main/java ./cc-test-reporter format-coverage ./$module/target/site/jacoco/jacoco.xml --input-type jacoco -o reports/codeclimate.integration.$module.json
+    done
+  - ./cc-test-reporter sum-coverage reports/codeclimate.* -o coverage/codeclimate.json
+  - ./cc-test-reporter upload-coverage
   # Build and test the website
   - docker-compose down
   - docker-compose -f dpc-web/docker-compose.yml build
