DPC-331: Integrate Swagger (#96)
* DPC-331: Added Swagger bundle to dropwizard build.

We are now generating Swagger docs for public endpoints.

* DPC-331: Add unit test for verifying method properties

Added a simple unit test that verifies all API methods have the appropriate annotations.

In this, case, we're just verifying Swagger annotations.

* DPC-331: Added API Key security definition

Specified that we can use API keys for protected resources.

* DPC-331: More resources and added license link

* DPC-303: All API Service endpoints are Swagged

* DPC-331: Attribution service now has Swagger documentation.

All the endpoints are annotated and the documentation is generating correctly.

* Updated github PR template to include FHIR and Swagger tasks

* DPC-331: Updated tests to correct status code

Creation methods now return the correct (201) status code, but the test suite wasn't updated to account for it.

* DPC-331: Code climate and missed test cleanup

* DPC-331: Code review changes

--- a/dpc-api/src/main/resources/application.conf
+++ b/dpc-api/src/main/resources/application.conf
@@ -17,4 +17,10 @@ dpc.api {
       schematronValidation = true
     }
   }
+
+  swagger {
+    resourcePackage = gov.cms.dpc.api.resources
+    license = "license"
+    licenseUrl = "https://github.com/CMSgov/dpc-app/blob/master/LICENSE.md"
+  }
 }
