--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,11 @@
                 <artifactId>hapi-fhir-structures-r4</artifactId>
                 <version>${hapi.fhir.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.smoketurner</groupId>
+                <artifactId>dropwizard-swagger</artifactId>
+                <version>1.3.12-1</version>
+            </dependency>
             <!--Test dependencies-->
             <dependency>
                 <groupId>org.slf4j</groupId>
