DPC-428: Demo command is updated to be working.
We now create the Organization before running the test.

Refactored the Organization creation to be a shared helper in dpc-common.

--- a/dpc-common/pom.xml
+++ b/dpc-common/pom.xml
@@ -78,5 +78,11 @@
             <artifactId>hapi-fhir-validation-resources-dstu3</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!--        We need the HTTP Client for the helper class, but it can be provided-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
