--- a/dpc-web/config/database.yml
+++ b/dpc-web/config/database.yml
@@ -21,10 +21,13 @@ default: &default
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
+  url: <%= ENV['DATABASE_URL'] %>
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASS'] %>
+
 
 development: &development
   <<: *default
-  database: dpc-website_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -33,9 +36,9 @@ development: &development
   username: <%= ENV.fetch("DB_USER", nil) %>
 
   # The password associated with the postgres role (username).
-  password: <%= ENV.fetch("DB_PASS", Rails.application.credentials.db[:development][:password]) %>
+  password: <%= ENV.fetch("DB_PASS", nil) %>
 
-  host: <%= ENV.fetch("DB_HOST", "localhost") %>
+  url: <%= ENV.fetch("DATABASE_URL", "postgresql://localhost/dpc-website_development") %>
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
@@ -56,7 +59,6 @@ development: &development
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: dpc-website_test
 
 
 # As with config/secrets.yml, you never want to store sensitive information,
@@ -80,6 +82,3 @@ test:
 #
 production:
   <<: *default
-  database: dpc-website_production
-  username: dpc-website
-  password: <%= Rails.application.credentials.db[:production][:password] %>
