Add myself (Ron) to developer list

--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
             <email>ronak.shah@hhs.gov</email>
             <organization>US Department of Health and Human Services</organization>
         </developer>
+        <developer>
+            <id>ron</id>
+            <name>Ron Heft</name>
+            <email>ronald.k.heft@omb.eop.gov</email>
+            <organization>United States Digital Service</organization>
+        </developer>
     </developers>
 
     <dependencyManagement>
