--- a/dpc-web/config/database.yml
+++ b/dpc-web/config/database.yml
@@ -59,7 +59,12 @@ development: &development
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  username: <%= ENV.fetch("DB_USER", nil) %>
 
+  # The password associated with the postgres role (username).
+  password: <%= ENV.fetch("DB_PASS", nil) %>
+
+  url: <%= ENV.fetch("DATABASE_URL", "postgresql://localhost/dpc-website_test") %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
