--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -31,3 +31,11 @@ plugins:
     enabled: true
     config:
       sonar.java.source: "11"
+  brakeman:
+    enabled: true
+    config:
+      app_path: dpc-web
+  rubocop:
+    enabled: true
+    config:
+      file: dpc-web/.rubocop.yml
