Marc/login dpc 407 (#132)
* Added users and registrations to website

* Added users and registrations

* Added more feature specs

* Shifted fields to signup and added brakeman

* clear spec file and fix database issue

* basic log in form styles

* update out the layout files

* style create account field

* links and navbar updates

* grid on registration pages

* style error alert

* adjust rspec test string

* Added organization type to User

* Added users and registrations to website

* Added users and registrations

* Added more feature specs

* Shifted fields to signup and added brakeman

* clear spec file and fix database issue

* basic log in form styles

* update out the layout files

* style create account field

* links and navbar updates

* grid on registration pages

* style error alert

* adjust rspec test string

* Added organization type to User

* update subject param

--- a/dpc-web/Gemfile
+++ b/dpc-web/Gemfile
@@ -16,6 +16,8 @@ gem 'kramdown', '~> 2.1'
 
 gem 'jquery-rails'
 gem 'bootstrap'
+gem 'devise'
+gem 'brakeman'
 
 group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
@@ -25,6 +27,13 @@ group :development, :test do
   gem 'capybara'
   gem 'factory_bot_rails'
   gem 'faker'
+  gem 'simplecov', require: false
+  gem 'vcr'
+  gem 'webmock'
+end
+
+group :test do
+  gem 'selenium-webdriver'
 end
 
 group :development do
