--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ ig/output
 ig/generated_output
 .bin/
 dpc-web/public/ig
+ig/source/resources/implementationguide/*parameters.json
 
 *.code-workspace
 .factorypath
