--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ bbcerts/*
 ig/output
 ig/generated_output
 .bin/
+dpc-web/public/ig
+ig/source/resources/implementationguide/*parameters.json
 
 *.code-workspace
 .factorypath
