DPC-473: Reduce dpc-web Docker image size (#161)
* Break dpc-web image into multi-stage build

* Build dpc-web ruby component in separate Docker build

* Fix dpc-web assets pipeline issue with multi-stage Docker build

--- a/dpc-web/Dockerfile
+++ b/dpc-web/Dockerfile
@@ -1,44 +1,56 @@
-FROM ruby:2.6.2-alpine
+FROM adoptopenjdk/openjdk11:latest AS java_builder
 
 # Install build dependencies
-RUN apk add --no-cache postgresql-dev alpine-sdk npm tzdata fontconfig ttf-dejavu
-RUN apk add --no-cache --repository=http://dl-cdn.alpinelinux.org/alpine/edge/community openjdk11
+RUN apt-get update && apt-get install -y build-essential ruby-full fontconfig ttf-dejavu
+RUN gem install jekyll
 
-# Configure Alpine Java dependencies
-RUN ln -s /usr/lib/libfontconfig.so.1 /usr/lib/libfontconfig.so && \
-    ln -s /lib/libuuid.so.1 /usr/lib/libuuid.so.1 && \
-    ln -s /lib/libc.musl-x86_64.so.1 /usr/lib/libc.musl-x86_64.so.1
-ENV LD_LIBRARY_PATH /usr/lib
+# Build the IG assets
+WORKDIR /dpc-app
+COPY / /dpc-app
+RUN make ig/publish
+
+
+FROM ruby:2.6.2-alpine AS ruby_builder
+
+# Install build dependencies
+RUN apk add --no-cache postgresql-dev && \
+    apk add --no-cache --virtual build-deps alpine-sdk npm tzdata
 
 # Set the working directory
-RUN mkdir /dpc-app
-WORKDIR /dpc-app/dpc-web
+RUN mkdir /dpc-web
+WORKDIR /dpc-web
 
 # Copy over the files needed to fetch dependencies
-COPY /dpc-web/Gemfile /dpc-app/dpc-web/Gemfile
-COPY /dpc-web/Gemfile.lock /dpc-app/dpc-web/Gemfile.lock
-COPY /dpc-web/package.json /dpc-app/dpc-web/package.json
-COPY /dpc-web/package-lock.json /dpc-app/dpc-web/package-lock.json
+COPY /dpc-web/Gemfile /dpc-web/Gemfile.lock /dpc-web/
+COPY /dpc-web/package.json /dpc-web/package-lock.json /dpc-web/
+COPY --from=java_builder /dpc-app/dpc-web/public/ig /dpc-web/public/ig
 
 # Install the website dependencies
 RUN gem install bundler --no-document && bundle install && npm install
-RUN gem install jekyll
 
-# Copy the website and dependencies needed to build supplimental website components
-RUN mkdir -p /dpc-app/dpc-common/src/main/resources/validations && mkdir -p /dpc-app/dpc-api/src/main/resources
-COPY /dpc-web /dpc-app/dpc-web
-COPY /Makefile /dpc-app/Makefile
-COPY /ig /dpc-app/ig
-COPY /dpc-common/src/main/resources/validations /dpc-app/dpc-common/src/main/resources/validations
-COPY /dpc-api/src/main/resources /dpc-app/dpc-api/src/main/resources
+# Copy and build the assets pipeline
+COPY /dpc-web /dpc-web
+RUN RAILS_ENV=production SECRET_KEY_BASE=dummy bundle exec rake assets:precompile
 
-# Build the IG component
-WORKDIR /dpc-app
-RUN make ig/publish
+# Clean up from the build
+RUN rm -rf /usr/local/bundle/cache/*.gem && \
+    find /usr/local/bundle/gems/ -name "*.c" -delete && \
+    find /usr/local/bundle/gems/ -name "*.o" -delete && \
+    rm -rf tmp/cache spec
 
-# Clean up after building
-RUN mv /dpc-app/dpc-web /dpc-web && cd / && rm -rf dpc-app
+
+FROM ruby:2.6.2-alpine
+
+# Install app dependencies
+RUN apk add --no-cache postgresql-client nodejs tzdata
+
+# Set the working directory
+RUN mkdir /dpc-web
 WORKDIR /dpc-web
+
+# Copy the compiled Ruby app
+COPY --from=ruby_builder /usr/local/bundle/ /usr/local/bundle/
+COPY --from=ruby_builder /dpc-web /dpc-web
 
 # Start the rails server
 CMD ["./docker/entrypoint.sh"]
