--- a/dpc-common/pom.xml
+++ b/dpc-common/pom.xml
@@ -37,6 +37,14 @@
             <version>5.4.2.Final</version>
             <scope>provided</scope>
         </dependency>
+        <!--Locking this dependency version to the one provided by Dropwizard, we'll need to manually update it as we go along-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-jpamodelgen</artifactId>
+            <version>5.4.2.Final</version>
+            <!--            We only need this a build time-->
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
