--- a/dpc-api/pom.xml
+++ b/dpc-api/pom.xml
@@ -83,6 +83,7 @@
         <dependency>
             <groupId>${hapi.fhir.groupID}</groupId>
             <artifactId>hapi-fhir-validation-resources-dstu3</artifactId>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.helger</groupId>
