--- a/dpc-aggregation/pom.xml
+++ b/dpc-aggregation/pom.xml
@@ -174,6 +174,13 @@
                 <configuration>
                     <extraDirectory>
                         <path>${project.basedir}/../bbcerts</path>
+                        <path>${project.basedir}/docker</path>
+                        <permissions>
+                            <permission>
+                                <file>/entrypoint.sh</file>
+                                <mode>755</mode>
+                            </permission>
+                        </permissions>
                     </extraDirectory>
                     <container>
                         <args>
@@ -182,6 +189,7 @@
                         <ports>
                             <port>8081</port>
                         </ports>
+                        <entrypoint>/entrypoint.sh</entrypoint>
                     </container>
                 </configuration>
             </plugin>
