--- a/dpc-aggregation/pom.xml
+++ b/dpc-aggregation/pom.xml
@@ -172,16 +172,29 @@
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
                 <configuration>
-                    <extraDirectory>
-                        <path>${project.basedir}/../bbcerts</path>
-                        <path>${project.basedir}/docker</path>
+<!--                    <extraDirectory>-->
+<!--                        <path>${project.basedir}/../bbcerts</path>-->
+<!--                        <path>${project.basedir}/docker</path>-->
+<!--                        <permissions>-->
+<!--                            <permission>-->
+<!--                                <file>/entrypoint.sh</file>-->
+<!--                                <mode>755</mode>-->
+<!--                            </permission>-->
+<!--                        </permissions>-->
+<!--                    </extraDirectory>-->
+                    <extraDirectories>
+                        <paths>
+                            <path>${project.basedir}/../bbcerts</path>
+                            <path>${project.basedir}/target/jacoco-agent</path>
+                            <path>${project.basedir}/docker</path>
+                        </paths>
                         <permissions>
                             <permission>
                                 <file>/entrypoint.sh</file>
                                 <mode>755</mode>
                             </permission>
                         </permissions>
-                    </extraDirectory>
+                    </extraDirectories>
                     <container>
                         <args>
                             <arg>server</arg>
