--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       - redis
     volumes:
       - export-volume:/app/data
+      - ./jacocoReport/aggregation:/jacoco-report
 
   attribution:
     image: ${ECR_HOST:-430398651479.dkr.ecr.us-east-1.amazonaws.com/dpc-attribution}:latest
@@ -36,6 +37,8 @@ services:
     ports:
       - "3500:8080"
       - "9902:9900"
+    volumes:
+      - ./jacocoReport/attribution:/jacoco-report
 
   api:
     image: ${ECR_HOST:-430398651479.dkr.ecr.us-east-1.amazonaws.com/dpc-api}:latest
@@ -49,7 +52,7 @@ services:
       - attribution
     volumes:
       - export-volume:/app/data
-
+      - ./jacocoReport/api:/jacoco-report
 volumes:
   export-volume:
     driver: local
